--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "clean-webpack-plugin": "^1.0.0",
     "compression-webpack-plugin": "^2.0.0",
     "css-loader": "^2.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^3.0.1",
     "glob": "^7.1.3",
@@ -47,6 +49,9 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "modernizr": "^3.6.0",
+    "owl.carousel": "^2.3.4"
   }
 }
